--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>welcome to my site!!</h1>
+    <h1>welcome to my site!</h1>
     <h2>hello</h2>
     hello world
   </body>
